# insomnia

./: pyproject.toml
src/insomnia/: insomnia.css  test_scroll_behavior.py  test_sleeps.py  tui.py
tests/: test_process_grouping.py  test_scroll_behavior.py
