[tool.poetry]
name = "insomnia"
version = "0.1.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
packages = [{include = "insomnia", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
humanize = "^4.4.0"
rich = "^12.6.0"
textual = "^0.6.0"

[tool.poetry.scripts]
insomnia = "insomnia.insomnia:main"

[tool.poetry.group.dev.dependencies]
textual = {version = "^0.6.0", extras = ["dev"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
